<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DTZ励生活</string>
    <string name="open_app">马上体验</string>

    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新中\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="pull_to_refresh_tips">最后一次更新:%s</string>

    <string name="house_sell">房屋出售 </string>
    <string name="house_rent">房屋出租</string>

    <string name="user_name">用户名</string>
    <string name="address">地址</string>
    <string name="password">密码</string>
    <string name="save_password">记住密码</string>
    <string name="forget_password">找回密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>

    <string name="my_info">我的信息</string>
    <string name="log_off">注销</string>

    <string name="submit">提  交</string>
    <string name="cancel">取消</string>
    <string name="public_repairs">报事报修</string>
    <string name="click_refresh">没有查询到数据,点击刷新</string>

    <string name="mobile_num">输入11为手机号</string>
    <string name="get_verify_code">获取校验码</string>
    <string name="input_verify_code">输入校验码</string>
    <string name="verify_code">获取验证码</string>
    <string name="input_password">请设置密码</string>
    <string name="modify_password">修改密码</string>
    <string name="original_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="affirm_password">请确认密码</string>

    <string name="affirm_register">确认注册</string>

    <string name="property_steward">物业管家</string>

    <string name="new_info">资讯</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="no_data">没有查询到数据</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>


    <string name="unhandle">待处理</string>
    <string name="inhandle">处理中</string>
    <string name="handled">已处理</string>


    <!--报事报修模块-->
    <string name="function_repairs">报事报修</string>
    <string name="repairs_plan">报修进度</string>
    <string name="repairs_handle">立即处理</string>
    <string name="repairs_return">回复</string>

    <string name="link_man">联系人</string>
    <string name="tel">联系电话</string>
    <string name="repairs_area">报修区域</string>
    <string name="project_name">选择项目名称</string>

    <string name="service_bulletin">服务公告</string>

    <string name="owner_function_complan">业主投诉建议</string>
    <string name="function_complan">投诉建议</string>
    <string name="suggestions_info">投诉建议详情</string>
    <string name="complain_suggestions_repeal">撤销</string>
    <string name="set_score">评分</string>

    <string name="complain_suggestions_time">投诉建议时间</string>
    <string name="complain_suggestions_status">投诉建议状态</string>
    <string name="complain_suggestions_person">投诉建议人</string>
    <string name="complain_suggestions_content">投诉建议内容</string>
    <string name="process_person">处理人</string>
    <string name="process_suggestions">处理建议</string>
    <string name="process_time">处理时间</string>
    <string name="evaluate_time">评价时间</string>
    <string name="evaluate_score">评价分数</string>
    <string name="evaluate_content">评价内容</string>

    <string name="about_me">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;戴德梁行励生活，是由北京戴德梁行携手重庆物联利浪科技有限公司联合打造的戴德梁行智慧生活圈平台。
        把服务、物业、商城、商家融为一体的综合生活智能服务平台，为戴德梁行物业与业主之间构筑畅通的交流沟通渠道，提供便利的生活服务。
    </string>

    <string name="house_name">门&#160;&#160;牌&#160;&#160;号:%1$s</string>
    <string name="area">区&#160;&#160;&#160;&#160;&#160;&#160;域:%1$s</string>
    <string name="rent_name">租户名称:%1$s</string>
    <string name="fee_qurey">费用查询</string>
    <string name="fee_record">费用记录</string>
    <string name="fee_detail">费用详情</string>

    <string name="arrearage_fee">欠缴金额</string>

    <string name="house_rental">房屋租售</string>
    <string name="house_detail">房屋详情</string>


    <string name="complan_processed_string">已处理</string>
    <string name="complan_untrasted_string">待处理</string>

    <string name="affirm_logoff">确认注销?</string>
    <string name="yes">是</string>
    <string name="no">否</string>

    <string name="community_offer">企业招聘</string>
    <string name="offer_descript">职位描述</string>
    <string name="offer_detail">职位详情</string>
    <string name="job_count">招聘%s人</string>
    <string name="job_work_experience">经验%s年</string>
    <string name="job_work_salary">%s元</string>
    <string name="offer_select">职位选择</string>

    <string name="life_service">生活服务</string>

    <string name="select_area">区域选择</string>
    <string name="select_service_type">服务类型</string>
    <string name="service_descript">服务详情</string>
    <string name="select_service_method">服务方式</string>

    <string name="discount_price">折扣价</string>
    <string name="price">原价</string>
    <string name="reservation_buy">一元预约</string>

    <string name="new_address">+ 新建地址</string>
    <string name="save_address">保存地址</string>
    <string name="modify_address">修改地址</string>
    <string name="recevie_address">收货地址</string>
    <string name="recevie_name">收货人姓名</string>
    <string name="recevie_tel">收货人电话</string>
    <string name="recevie_memo">收货备注</string>
    <string name="reservation_info">预约信息</string>

    <string name="affirm_delete">确认删除?</string>
    <string name="del_service">删除</string>

    <string name="debug_down_load_url">http://192.168.1.96:8085/browse/LIL-PAS-%s/artifact/shared/apkFiles/</string>
    <string-array name="debug_down_load_urls">
        <item>http://test.yuke.me:9000/public/file/Passionlife.apk</item>
        <item>http://dev.yuke.me:9000/public/file/Passionlife.apk</item>
        <item>custom</item>
    </string-array>

</resources>