<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/white_shape_click_bg"
    android:orientation="vertical">

    <EditText
        android:id="@+id/original_password"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_coner_style"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/original_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_coner_style"
        android:hint="@string/new_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/affirm_password"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_coner_style"
        android:hint="@string/affirm_password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/register_login_hight"
            android:background="@drawable/red_shape_click_bg"
            android:text="@string/submit"
            android:textColor="@color/button_text_click_color"></Button>

        <Button
            android:id="@+id/cancel"
            style="@style/login_button_style"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/register_login_hight"
            android:background="@drawable/red_shape_click_bg"
            android:text="@string/cancel"
            android:textColor="@color/button_text_click_color"></Button>
    </LinearLayout>

</LinearLayout>