<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <include
        android:id="@+id/top_layout"
        layout="@layout/top_menu" />

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_layout"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/complain_suggestions_time"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/complain_suggestions_time" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/background_grey" />

            <TextView
                android:id="@+id/complain_suggestions_status"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/complain_suggestions_status" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/background_grey" />

            <TextView
                android:id="@+id/complain_suggestions_person"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/complain_suggestions_person" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/background_grey" />

            <TextView
                android:id="@+id/complain_suggestions_content"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:padding="8dp"
                android:text="@string/complain_suggestions_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/background_grey" />

            <LinearLayout
                android:id="@+id/process_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/process_person"
                    style="@style/text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/process_person" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/background_grey" />

                <TextView
                    android:id="@+id/process_suggestions"
                    style="@style/text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/process_suggestions" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/background_grey" />

                <TextView
                    android:id="@+id/process_time"
                    style="@style/text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/process_time" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/background_grey" />

            <LinearLayout
                android:id="@+id/evaluate_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/evaluate_time"
                    style="@style/text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/evaluate_time" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/background_grey" />

                <TextView
                    android:id="@+id/evaluate_score"
                    style="@style/text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/evaluate_score" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/background_grey" />

                <TextView
                    android:id="@+id/evaluate_content"
                    style="@style/text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/evaluate_content" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/background_grey" />

            <GridView
                android:id="@+id/photo_img_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fadingEdge="none"
                android:padding="8dp"
                android:horizontalSpacing="5.0dp"
                android:listSelector="#00000000"
                android:numColumns="2"
                android:verticalSpacing="5.0dp" />

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/set_score"
        style="@style/text_style"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:background="@drawable/red_shape_click_bg"
        android:gravity="center"
        android:text="@string/set_score"
        android:textColor="@color/button_text_click_color"
        android:visibility="gone" />

</RelativeLayout>