<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_grey"
    android:orientation="vertical">

    <include layout="@layout/top_menu" />


    <LinearLayout
        android:id="@+id/get_verify_code_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/white_shape_click_bg"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@android:color/white"
            android:gravity="center|left"
            android:hint="@string/mobile_num"
            android:inputType="phone"
            android:maxLength="11"
            android:singleLine="true"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/get_verify_code"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/red_shape_click_bg"
            android:clickable="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/verify_code"
            android:textColor="@color/button_text_click_color"
            android:textSize="@dimen/register_login_font_size"
            android:textStyle="normal" />

    </LinearLayout>

    <TextView
        android:id="@+id/delay_tip"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/get_verify_code_layout"
        android:layout_gravity="center|left"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:visibility="gone" />


    <EditText
        android:id="@+id/verify_code"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/white_shape_click_bg"
        android:gravity="center_vertical"
        android:hint="@string/input_verify_code"
        android:singleLine="true"
        android:textSize="16sp" />


    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/white_shape_click_bg"
        android:gravity="center_vertical"
        android:hint="@string/input_password"
        android:password="true"
        android:singleLine="true"
        android:textSize="16sp" />


    <EditText
        android:id="@+id/affirm_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/white_shape_click_bg"
        android:gravity="center_vertical"
        android:hint="@string/affirm_password"
        android:password="true"
        android:singleLine="true"
        android:textSize="16sp" />


    <Button
        android:id="@+id/register_bt"
        android:textSize="@dimen/register_login_font_size"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_login_hight"
        android:layout_margin="5dp"
        android:background="@drawable/red_shape_click_bg"
        android:text="@string/affirm_register"
        android:textColor="@color/button_text_click_color"></Button>


</LinearLayout>