<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="120dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="120dp"
    android:background="@color/white">


    <RelativeLayout
        android:id="@+id/evaluate_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/evaluate_score"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/evaluate_score"
            android:textSize="16sp" />

        <RatingBar
            android:id="@+id/score_ratingbar"
            style="@style/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@+id/evaluate_score"
            android:numStars="5"
            android:stepSize="1" />

    </RelativeLayout>


    <EditText
        android:id="@+id/evaluate_content"
        style="@style/text_style"
        android:layout_width="630dp"
        android:layout_height="120dp"
        android:layout_below="@+id/evaluate_layout"
        android:layout_margin="8dp"
        android:background="@drawable/edit_coner_style"
        android:gravity="top"
        android:hint="@string/evaluate_content"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/evaluate_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submit_bt"
            style="@style/text_style"
            android:layout_width="0dp"
            android:layout_height="@dimen/register_login_hight"
            android:layout_weight="1"
            android:background="@drawable/red_shape_click_bg"
            android:text="@string/submit"
            android:textColor="@color/button_text_click_color"></Button>

        <Button
            android:id="@+id/cancel_bt"
            style="@style/text_style"
            android:layout_width="0dp"
            android:layout_height="@dimen/register_login_hight"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@drawable/red_shape_click_bg"
            android:text="@string/cancel"
            android:textColor="@color/button_text_click_color"></Button>


    </LinearLayout>

</RelativeLayout>