<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/top_layout"
        layout="@layout/top_menu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/house_name"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:padding="8dp"
            android:drawablePadding="5dp"
            android:drawableLeft="@mipmap/house_number"
            android:text="@string/house_name"
             />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background_grey" />

        <TextView
            android:id="@+id/area"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:padding="8dp"
            android:drawablePadding="5dp"
            android:drawableLeft="@mipmap/area_name"
            android:text="@string/area" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background_grey" />

        <TextView
            android:id="@+id/rent_name"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:padding="8dp"
            android:drawablePadding="5dp"
            android:drawableLeft="@mipmap/lessee_name"
            android:text="@string/rent_name" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/background_grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            style="@style/text_style"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:gravity="center|left"
            android:padding="8dp"
            android:drawablePadding="5dp"
            android:drawableLeft="@mipmap/no_money"
            android:text="@string/arrearage_fee" />

        <TextView
            android:id="@+id/arrearage_fee"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center|left"
            android:textColor="@color/base_color"
            android:drawablePadding="2dp"
            android:drawableRight="@mipmap/icon_job_title_draw_right_down"
            android:padding="8dp"/>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/background_grey" />

    <com.hotel.service.ui.custom.PullToRefreshView
        android:id="@+id/refreshable_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <com.hotel.service.ui.custom.ScrollViewExtend
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.hotel.service.ui.custom.HomeListView
                    android:id="@+id/content_gv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:cacheColorHint="#00000000"
                    android:divider="@color/background_grey"
                    android:dividerHeight="1dp" />

                <include layout="@layout/process_bar" />

            </LinearLayout>
        </com.hotel.service.ui.custom.ScrollViewExtend>
    </com.hotel.service.ui.custom.PullToRefreshView>


</LinearLayout>